name:                ad-th
version:             0.1.0.0
synopsis:            AD via metaprogramming
-- description:
homepage:            https://github.com/ocramz/ad-th
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           2021 Marco Zocca
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Numeric.AD.TH
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , containers
                     , data-reify
                     -- , haskell-src-meta
                     , template-haskell

-- executable ad-th
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , ad-th
--                      , template-haskell >= 2.16

-- test-suite spec
--   default-language:    Haskell2010
--   ghc-options:         -Wall
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , ad-th
--                      , hspec
--                      , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/ad-th
